# sandbox

./: .gitignore  .gitmodules  README.md  canvas.css  canvas.htm  onclickdiv.html  svg-draw.html
canvas/: canvas.js  index.html
canvas/game/: game.css  game.htm  game.js
cosmosmongotest/: .gitignore  Blob.cs  Program.cs  Tag.cs  cosmosmongotest.csproj
dotnet/epsg-convert/: Program.cs  Transformer.cs  blokindeling-EPSG28992.json  blokindeling-EPSG4326.json  epsg-convert.csproj  (+20 more)
elasticsearch/: suggest.txt
encodefont/: encode.rb
fast-py-duck-ng/: .gitignore  README.md  package-lock.json
fast-py-duck-ng/backend/: main.py  models.py  pyproject.toml
fast-py-duck-ng/backend/data/: games.parquet
fortunejs/: index.js  package-lock.json  package.json  store.js
js/: download.js  promiseme.js  prototypeclass.js  simpleclass.js
linkedin/: getviews.rb
mail/: deliver-mail.txt
nouislider/: 34789292.htm  nouislider.min.css  slider.html
rmagick/: magix.rb
ruby/: Gemfile  decorator.rb  leaderboard-info.xml  modules.rb  nauts.rb  profile-info.json  struct.rb  xmlparsing.rb
sample-rails-app/: Gemfile
snelstart/: SnelStartGatewayInterface.chm
swift/: .gitignore  Examples.swift
thread/: http_client.rb  test.rb
tinypng/: Gemfile  composer.json  compress.php  compress.py  compress.rb  curl.txt  local-compress.rb  shrink-directory.sh  simple-compress.rb  tinify-directory.rb  tinify-directory.sh  tiny-with-fopen.php
vacationresponder/: .vacation.aliases  .vacation.body  .vacation.msg  .vacation.subj  vacation.py  vacation.tar  vacationgui.py
(+43 files in other folders)
