[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "faker>=37.3.0",
    "fastapi[standard]>=0.115.12",
    "polars>=1.30.0",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.11",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
]
